@@ -209,6 +209,10 @@ let mk_pp f =
   "-pp", Arg.String f, "<command>  Pipe sources through preprocessor <command>"
 ;;
 
+let mk_ppx f =
+  "-ppx", Arg.String f, "<command>  Pipe abstract syntax trees through preprocessor <command>"
+;;
+
 let mk_principal f =
   "-principal", Arg.Unit f, " Check principality of type inference"
 ;;
@@ -428,6 +432,7 @@ module type Bytecomp_options = sig
   val _output_obj : unit -> unit
   val _pack : unit -> unit
   val _pp : string -> unit
+  val _ppx : string -> unit
   val _principal : unit -> unit
   val _rectypes : unit -> unit
   val _runtime_variant : string -> unit
@@ -517,6 +522,7 @@ module type Optcomp_options = sig
   val _p : unit -> unit
   val _pack : unit -> unit
   val _pp : string -> unit
+  val _ppx : string -> unit
   val _principal : unit -> unit
   val _rectypes : unit -> unit
   val _runtime_variant : string -> unit
@@ -644,6 +650,7 @@ struct
     mk_output_obj F._output_obj;
     mk_pack_byt F._pack;
     mk_pp F._pp;
+    mk_ppx F._ppx;
     mk_principal F._principal;
     mk_rectypes F._rectypes;
     mk_runtime_variant F._runtime_variant;
@@ -741,6 +748,7 @@ struct
     mk_p F._p;
     mk_pack_opt F._pack;
     mk_pp F._pp;
+    mk_ppx F._ppx;
     mk_principal F._principal;
     mk_rectypes F._rectypes;
     mk_runtime_variant F._runtime_variant;
